ajustando estrutura do projeto e criando endpoints para cadastro de alunos

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "wanderson e carlos",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "dialogflow": "^1.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.7",
     "node-telegram-bot-api": "^0.53.0"
   }
 }
