--- a/src/package.json
+++ b/src/package.json
@@ -4,14 +4,16 @@
   "description": "bot tcc",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -r dotenv/config server.js"
   },
-  "author": "wanderson e carlos",
+  "author": "Wanderson Rafael & Carlos Eduardo Feitosa da Costa",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dialogflow": "^1.2.0",
+    "dotenv": "^9.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.12.7",
     "node-telegram-bot-api": "^0.53.0"
