--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dialogflow": "^1.2.0",
+    "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.12.7",
