--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "html-pdf": "^3.0.1",
     "mongoose": "^5.12.13",
     "node-telegram-bot-api": "^0.53.0",
-    "nodemailer": "^6.6.1"
+    "nodemailer": "^6.6.1",
+    "phantomjs-prebuilt": "^2.1.13"
   }
 }
