--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.12.13",
     "node-telegram-bot-api": "^0.53.0",
     "nodemailer": "^6.6.1",
+    "nodemon": "^2.0.7",
     "phantomjs-prebuilt": "^2.1.13"
   }
 }
