--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r dotenv/config server.js"
+    "dev": "nodemon -r dotenv/config server.js",
+    "start": "npm run dev"
   },
   "author": "Wanderson Rafael & Carlos Eduardo Feitosa da Costa",
   "license": "ISC",
