--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "agilebot",
   "version": "1.0.0",
   "description": "bot tcc",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -r dotenv/config server.js",
